source/css/style.css
/* ... */
.b-about__content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
}
.b-about__content > p {
  font-size: 18px;
  line-height: 26px;
}
.b-about__images {
  display: flex;
  flex-direction: column;
}
.b-about__images > div {
  display: flex;
}
.b-about__images_start,
.b-about__images_arrow,
.b-about__images_end {
  justify-content: center;
}
.b-about__images_start > div {
  width: 100%;
  max-width: 319px;
  overflow: hidden;
  border-radius: 12px;
}
.b-about__images_start > div > img {
  object-fit: cover;
  object-position: center;
  width: 100%;
  height: 100%;
}
.b-about__images_end > div {
  width: 100%;
  max-width: 358px;
  height: 358px;
  overflow: hidden;
  border-radius: 12px;
}
.b-about__images_end > div > img {
  object-fit: cover;
  object-position: top center;
  width: 100%;
  height: 100%;
}

/* ABOUT */

/* Tery AI */
.b-tery-ai {
  position: relative;
}
.b-tery-ai::after {
  content: "";
  display: block;
  width: 700px;
  height: 700px;
  box-shadow: rgba(98, 46, 210, 1) 0 0 200px;
  background: rgba(98, 46, 210, 0.6);
  filter: blur(100px);
  position: absolute;
  z-index: 0;
  left: 10%;
  top: 0;
  border-radius: 50%;
}
.b-tery-ai > div {
  position: relative;
  z-index: 1;
}
.b-tery-ai__content > p {
  font-size: 16px;
  line-height: 26px;
}
.b-tery-ai__subtitle {
  margin-top: 32px;
}
.b-tery-ai__list {
  display: flex;
  flex-direction: column;
  gap: 32px;
  margin: 54px auto;
  max-width: 356px;
}
.b-tery-ai__list_item {
  display: flex;
  flex-direction: column;
  gap: 32px;
  text-align: center;
  justify-content: center;
  align-items: center;
  font-size: 18px;
  line-height: 28px;
}
.b-tery-ai__arrow--sm {
  display: none;
}

/* Tery AI */

/* GOALS */

.b-goals h2 {
  text-align: center;
  position: relative;
}
.b-goals h2::after {
  content: "";
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate3d(-50%, -50%, 0);
  filter: blur(27px);
  width: 60%;
  height: 25px;
  z-index: -1;
  box-shadow: var(--color--pink) 0 9px 10px;
  background: var(--color--pink);
}
.b-goals__list {
  margin-top: 54px;
}
.b-goals__list::after {
  content: "";
  display: block;
  clear: both;
}
.b-goals__list > *:not(:first-child) {
  margin-top: 36px;
}
.b-goals__item {
  position: relative;
  padding-left: 54px;
}
.b-goals__item > div {
  height: 100px;
  display: flex;
  align-items: center;
  padding-right: 90px;
}
.b-goals__item > div > span {
  position: absolute;
  left: 0;
  top: 0;
  font-size: 100px;
  line-height: 1;
  z-index: -1;
  opacity: 0.3;
}
.b-goals__item > div > h3 {
  font-size: 18px;
  line-height: 24px;
}
.b-goals__item > p {
  font-size: 14px;
  line-height: 18px;
}

h2.default-h2 {
  font-size: 26px;
}

/* GOALS */

/* COURSE RESULT */
.b-course-result__content {
  padding: 24px;
  max-width: 800px;
  margin: 0 auto;
}
.b-course-result__content p {
  font-size: 18px;
  line-height: 24px;
}
/* COURSE RESULT */

/* REVIEWS */

.b-reviews h2 {
  position: relative;
  display: inline-flex;
}
.b-reviews h2 > span {
  position: relative;
  z-index: 1;
}
.b-reviews h2::after {
  content: "";
  display: block;
  position: absolute;
  top: 15px;
  left: 20px;
  filter: blur(24px);
  width: 290px;
  height: 18px;
  z-index: 0;
  box-shadow: var(--color--pink) 0 3px 20px;
  background: var(--color--pink);
  transform: rotate(-4deg);
}

.b-reviews__wrapper {
  overflow: hidden;
  margin-top: 42px;
}
.b-reviews__wrapper > div {
  margin-bottom: -17px;
  overflow-x: auto;
  padding-bottom: 17px;
  white-space: nowrap;
  -webkit-overflow-scrolling: touch;
}
.b-reviews__list {
  display: flex;
  gap: 24px;
}
.b-reviews__item {
  border-radius: 20px;
  min-width: 263px;
  width: 263px;
  height: 435px;
  background: linear-gradient(315deg, #090015, #6e069a);
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  padding: 24px 0;
}
.b-reviews__item_video {
  border-radius: 11px;
  overflow: hidden;
}
.b-reviews__item_author {
  text-align: center;
}
.b-reviews__item_author > span {
  font-size: 24px;
  line-height: 42px;
}
.b-reviews__item_author > p {
  font-size: 14px;
  line-height: 22px;
}

/* STUDENTS */
.b-student-item {
  border-radius: 20px;
  min-width: 318px;
  width: 318px;
  height: 398px;
  background: linear-gradient(315deg, #090015, #6e069a);
  overflow: hidden;
  position: relative;
  white-space: normal;
}
.b-student-item__image {
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 0;
}
.b-student-item__image > img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.b-student-item__content {
  padding: 124px 24px 24px;
  position: relative;
  z-index: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 24px;
  height: 100%;
}
.b-student-item__name {
  font-size: 30px;
  line-height: 42px;
}
.b-student-item__desc {
  font-size: 14px;
  line-height: 22px;
  margin-top: 24px;
}
.b-student-item__button {
  color: var(--color--purpure);
  font-size: 14px;
  border-radius: 7px;
  background-color: #ffffff;
  width: 182px;
  height: 46px;
}
.b-student-item__details {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  font-size: 11px;
  gap: 12px;
  margin-top: 4px;
  min-height: 20px;
}
.b-student-item__inst {
  display: flex;
  align-items: center;
  height: 20px;
  padding: 0 6px;
  border: 1px solid white;
  border-radius: 6px;
}
.b-student-item__location {
  height: 12px;
  padding-left: 16px;
  background-image: url("./img/pin.png");
  background-size: 12px;
  background-repeat: no-repeat;
  background-position: left center;
}
/* STUDENTS */

/* PROGRAMS  */
.b-program {
  text-align: center;
}
.b-program h2 {
  font-size: 36px;
  line-height: 1;
  position: relative;
}
/* ... */

